[FIX] web: content of kanban column should not overflow
Currently, each kanban column adapts with the width of its
contents. This is not ideal for situation where the column
title is too long. This change employs the same strategy on
mobile view where we prevent overflow on each column.

We don't use `overflow: scroll` because it leaves empty space
between columns.

--- a/addons/web/static/src/views/kanban/kanban_controller.scss
+++ b/addons/web/static/src/views/kanban/kanban_controller.scss
@@ -488,6 +488,7 @@
     .o_kanban_group {
         flex-basis: calc(var(--KanbanRecord-width) + (2 * var(--KanbanGroup-padding-h)));
         padding: 0 var(--KanbanGroup-padding-h) var(--KanbanGroup-padding-bottom);
+        overflow: auto;
 
         .o_kanban_header > .o_kanban_header_title {
             // Makes the title come on top of the "no-content" background gradient.
